[package]
name = "rumrust"
authors = ["bitdoer"]
version = "0.1.0"
edition = "2018"
license = "GPLv3"
description = "lightweight x86 32-bit MurmurHash3 implementation"
repository = "https://github.com/bitdoer/rumrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
